--- a/assign3.ipynb
+++ b/assign3.ipynb
@@ -97,7 +97,7 @@
     "    # loads the .csv files in data/train/ and data/test/:\n",
     "    def _load_data(self, directory, dataset_type):\n",
     "        for file_name in os.listdir(directory): # use listdir to get filenames in nesessary folder\n",
-    "            if file_name.endswith(\".csv\"): # take files only with .csv extantion\n",
+    "            if file_name.endswith(\".csv\"): # take files only with .csv extention\n",
     "                subject, action, iteration = self._parse_file_name(file_name) # to split the file name into subject, action, and iteration\n",
     "                if action not in valid_actions: # check that isn't used invalid action\n",
     "                    raise ValueError(f\"Invalid action '{action}' in file '{file_name}'. Allowed actions: {valid_actions}\")\n",
@@ -159,14 +159,14 @@
     "            seq = self.data[dataset][subject][action][iteration] # get sequence from data dictionary\n",
     "            label = f\"{subject}_{action}_{iteration}.csv\" # get label - file name \n",
     "            columns = self.get_column_names() # get column names\n",
-    "            formatted_seq = self.format_sequence(seq) # format data (use only for visualisation)\n",
+    "            formatted_seq = self.format_sequence(seq) # format data (is used only for visualisation)\n",
     "            return seq, label, columns, formatted_seq\n",
     "        except KeyError:\n",
     "            raise ValueError(f\"Sequence not found for {dataset}/{subject}_{action}_{iteration}.csv\")\n",
     "\n",
     "    def random(self, dataset):\n",
     "        try: # run this code until an error occur\n",
-    "            subject = random.choice(list(self.data[dataset].keys())) # list converts the dictionary keys into a list, where keys - [\"p0\", \"p1\", ...]\n",
+    "            subject = random.choice(list(self.data[dataset].keys())) # list - converts the dictionary keys into a list, where keys - [\"p0\", \"p1\", ...]\n",
     "            action = random.choice(list(self.data[dataset][subject].keys()))\n",
     "            iteration = random.choice(list(self.data[dataset][subject][action].keys()))\n",
     "            return self.getSequence(dataset, subject, action, iteration)\n",
@@ -181,8 +181,6 @@
     "    def visualize(self, dataset, subject, action, iteration, frame, output_dir=\"visualizations\"):\n",
     "        seq, _, _, _ = self.getSequence(dataset, subject, action, iteration)\n",
     "        frame_data = seq[frame]\n",
-    "\n",
-    "        # has_angles = len(frame_data) >= 79\n",
     "\n",
     "        x_coords = frame_data[::3][:25]  # first 25 keypoints (X)\n",
     "        y_coords = frame_data[1::3][:25]  # first 25 keypoints (Y)\n",
@@ -248,12 +246,12 @@
     "        plt.savefig(output_path) # save frame in output path\n",
     "        plt.close()\n",
     "\n",
-    "    # to join all (125) frames to crate and save a video:\n",
+    "    # join all (125) frames to crate and save a video:\n",
     "    def save_video(self, dataset, subject, action, iteration, output_video=\"output.mp4\", frame_rate=30):\n",
     "        output_dir = f\"frames {subject}_{action}_{iteration}\" # create output directory file name\n",
     "        os.makedirs(output_dir, exist_ok=True) # create directory\n",
     "\n",
-    "        seq, _, _, _ = self.getSequence(dataset, subject, action, iteration)\n",
+    "        seq, _, _, _ = self.getSequence(dataset, subject, action, iteration) # get only sequence\n",
     "\n",
     "        frame_limit = 125  # limit the number of frames to save\n",
     "        for frame in range(min(frame_limit, len(seq))):  # Limit to 125 or the sequence length, whichever is smaller\n",
@@ -280,7 +278,7 @@
    "source": [
     "    First of all, we store train and test datasets in the dictionary.\n",
     "\n",
-    "    We also noticed that datasets have weird parameters for parts below hips. and confidences for these parts are also equel 0, so in our class we visualize only confident keypoints and joints (above or equel 0). However in the output video and in frames you can see text for these points. We want you to know that we show the text, but we skipped keypoints below 0.5 and don't join them"
+    "    We also noticed that datasets have weird parameters for parts below hips. and confidences for these parts are also equel 0, so in our class we visualize only confident keypoints and joints (above or equel 0). However in the output video and in frames you can see text for these points in the upper left corner. We want you to know that we display the text, but we skipped keypoints below 0.5 and don't join them"
    ]
   },
   {
@@ -1086,10 +1084,10 @@
     }
    ],
    "source": [
-    "\n",
+    "# class execution:\n",
     "if __name__ == \"__main__\":\n",
     "    dataset = Dataset(path_train, path_test) # get dataset from Dataset class\n",
-    "    seq, label, columns, formatted_seq = dataset.getSequence(\"train\", \"p0\", \"boxing\", \"01\")\n",
+    "    seq, label, columns, formatted_seq = dataset.getSequence(\"train\", \"p0\", \"boxing\", \"01\") # use formatted_seq only for visualization\n",
     "    df = pd.DataFrame(formatted_seq, columns=columns) # convert the data to a pandas DataFrame\n",
     "    df = df.fillna(\"\") # replace \"none\" with empty\n",
     "    table_title = f\"<h2>Sequence Label: {label}</h2>\"  # add a title using custom HTML\n",
@@ -1181,7 +1179,7 @@
     "\n",
     "**?Why?** Visualize the density of keypoint activity over a grid using a 2D heatmap for keypoint positions.\n",
     "\n",
-    "As the result we can see how many incorrect keypoints are in our datasets especially those that have 0 confidence (parts below hips)"
+    "As the result we can see how many incorrect keypoints are in our datasets especially those that have 0 confidence (parts below hips) in the upper left corner"
    ]
   },
   {
@@ -1297,13 +1295,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:blue\"> We trained our model using RandomForestClassifier.</span>\n",
+    " \n",
+    " *Why?*\n",
+    " - first of all, we were looking for the relatively simple (but power) model that would work good with \n",
+    " our table numerical datasets including classes;\n",
+    " - in our datasets we also have feature importance (confidences) for each point. \n",
+    " Random forest understands which keypoints or derived statistics (e.g., mean X-coordinate, standard deviation) \n",
+    " are most critical for distinguishing actions;\n",
+    " - it works good with table (structured) data;\n",
+    " - it requires minimal preprocessing (so in our case we didn't scale data. we normalize it, but we got the same result as without normalization);\n",
+    " - it works with categorical outputs (classes in our case);\n",
+    " - works good with noisy data. it useful for us because in some sequences we have 0 confidences and missing keypoints;    \n",
+    "\n",
+    "*What we could use for classification task instead?*\n",
+    "- Support Vector Machine (SVM):\n",
+    "However, it is not good for high-dimensional or large datasets and it requires careful preprocessing and tuning of kernels.\n",
+    "- Logistic Regression:\n",
+    "Limited in modeling nonlinear relationships between features.\n",
+    "- Deep Learning (e.g., LSTMs or CNNs):\n",
+    "It is more difficalt. May perform well for time-series data like motion sequences but requires significantly more data, preprocessing, and computational resources"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import nesessary libraries:\n",
-    "\n",
     "import os\n",
     "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -1395,7 +1418,7 @@
     "        \n",
     "        return np.array(features)\n",
     "\n",
-    "    # return all nesessary data\n",
+    "    # return all nesessary data:\n",
     "    def get_train_test_data(self):\n",
     "        return (\n",
     "            np.array(self.train_data),\n",
@@ -1412,7 +1435,7 @@
     "    np.random.seed(seed)\n",
     "    random.seed(seed)\n",
     "\n",
-    "# train model using RandomForestClassifier.\n",
+    "# train model using RandomForestClassifier:\n",
     "def train_and_evaluate(X_train, y_train, X_test, y_test, label_encoder):\n",
     "    model = RandomForestClassifier(\n",
     "        n_estimators=110,            # Increase number of trees\n",
@@ -1620,9 +1643,9 @@
     "    dataset_design = DesignDataset(train_dir=\"data/train\", test_dir=\"data/test\")\n",
     "    X_train, y_train, X_test, y_test = dataset_design.get_train_test_data()\n",
     "    \n",
-    "    # normalize data (Ensures all features are on the same scale, so no single feature dominates the model due to larger values):\n",
-    "    # normalization is not nesessary for random forest. Removing normalization doesn't change results almost at all.\n",
-    "    scaler = StandardScaler() # StandardScaler and MinMaxScaler give us quite the same result\n",
+    "    # normalize data (ensures all features are on the same scale, so no single feature dominates the model due to larger values):\n",
+    "    # normalization is not nesessary for random forest, so removing normalization doesn't change results almost at all.\n",
+    "    scaler = StandardScaler() # StandardScaler and MinMaxScaler give us the same result\n",
     "    X_train = scaler.fit_transform(X_train)\n",
     "    X_test = scaler.transform(X_test)\n",
     "    \n",
@@ -1631,6 +1654,7 @@
     "    y_train = label_encoder.fit_transform(y_train) #Standardizes the training data (X_train) by: fit(): Calculates the mean (𝜇) \n",
     "                                                    # and standard deviation (𝜎) for each feature in the training data.\n",
     "                                                    # transform(): Applies the standardization formula to each feature in X_train.\n",
+    "    \n",
     "    y_test = label_encoder.transform(y_test) # Standardizes the test data (X_test) using the mean and standard deviation calculated from the training data during fit()\n",
     "    \n",
     "   \n",
@@ -1681,7 +1705,7 @@
     "\n",
     "<span style=\"color:blue\"> **The best result we got:**</span>\n",
     "\n",
-    "Maximum Accuracy: 0.8984\n",
+    "Maximum Accuracy: 0.90\n",
     "\n",
     "Classification Report for Maximum Accuracy:\n",
     "\n",
@@ -1724,32 +1748,6 @@
     "- min_samples_leaf=2 - Specifies the minimum number of samples required to be at a leaf node (prevents the creation of leaf nodes with very few samples) - 2 helps avoid overfitting while still capturing enough detail.\n",
     "- random_state=random.randint(0, 10000) - Sets the seed for the random number generator (Generates a unique random seed for each experiment. This ensures varied results across iterations, which is useful for evaluating model robustness)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<span style=\"color:blue\"> We trained our model using RandomForestClassifier.</span>\n",
-    " \n",
-    " *Why?*\n",
-    " - first of all, we were looking for the relatively simple (but power) model that would work good with \n",
-    " our numerical datasets including classes;\n",
-    " - in our datasets we also have feature importance (confidences) for each point. \n",
-    " Random forest understands which keypoints or derived statistics (e.g., mean X-coordinate, standard deviation) \n",
-    " are most critical for distinguishing actions;\n",
-    " - it works good with table (structured) data;\n",
-    " - it requires minimal preprocessing (so in our case we didn't scale data. we normalize it, but we got the same result as without normalization);\n",
-    " - it works with categorical outputs (classes in our case);\n",
-    " - works good with noisy data. it useful for us because in some sequences we have 0 confidences and missing keypoints;    \n",
-    "\n",
-    "*What we could use for classification task instead?*\n",
-    "- Support Vector Machine (SVM):\n",
-    "However, it is not good for high-dimensional or large datasets and it requires careful preprocessing and tuning of kernels.\n",
-    "- Logistic Regression:\n",
-    "Limited in modeling nonlinear relationships between features.\n",
-    "- Deep Learning (e.g., LSTMs or CNNs):\n",
-    "It is more difficalt. May perform well for time-series data like motion sequences but requires significantly more data, preprocessing, and computational resources"
    ]
   }
  ],
